# dotpenrose

./: .gitignore  .xinitrc  Cargo.toml  README.md  common.nix  dev.nix  flake.nix  penrose.desktop  run_penrose.sh  run_penrose_backup.sh  run_penrose_debugx.sh  runtime.nix  use_dev_penrose.sh
crates/penrose_bbarker_contrib/: Cargo.toml  README.md
crates/penrose_bbarker_contrib/src/: lib.rs  log.rs  workspaces.rs
crates/penrose_bbarker_contrib/src/menus/: finder.rs
src/: bar.rs  lib.rs  log.rs  main.rs  workspaces.rs
