[package]
name = "dotpenrose"
version = "0.1.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>", "Brandon Barker <brandon.barker@gmail.com>"]
edition = "2021"
license = "GNU AGPLv3-or-later"
publish = false
readme = "README.md"

[dependencies]
# penrose = { git = "https://github.com/sminez/penrose.git", rev = "bbb2edc", features = ["keysyms", "serde"] }
penrose = { path = "../penrose", features = ["keysyms", "serde"] }
# penrose_ui = { git = "https://github.com/sminez/penrose.git", rev = "bbb2edc" }
penrose_ui = { path = "../penrose/crates/penrose_ui" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# func-iter = "0.1.0"
once_cell = "1.19.0"

[profile.release]
lto = "fat"
codegen-units = 1

