[package]
name = "penrose_bbarker_contrib"
version = "0.1.2"
authors = ["Brandon Barker <brandon.barker@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bbarker/dotpenrose"
description = "Various utilities (menus, functions, etc.) for use in a penrose window manager"

[dependencies]
penrose = { version = "0.4.0", features = ["keysyms", "serde"] }
# penrose = { git = "https://github.com/sminez/penrose.git", rev = "331a081", features = ["keysyms", "serde"] }
# penrose = { path = "../penrose", features = ["keysyms", "serde"] }
penrose_ui = { version = "0.4.0" }
# penrose_ui = { git = "https://github.com/sminez/penrose.git", rev = "331a081" }
# penrose_ui = { path = "../penrose/crates/penrose_ui" }
#tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# func-iter = "0.1.0"
once_cell = "1.19.0"
sysinfo = "0.30.13"
do-notation = "0.1.3"
#nunny = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1
